chore: commit changes for branch registro